<resources>
    <string name="app_name">E-KLONTONG</string>
    <string name="tagline">Your travel companion</string>
    <string name="develop_by">develop by Dream Space</string>
    <string name="GOOGLE_MAP_API_KEY">XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_news">News &amp; Event</string>
    <string name="menu_user">Profile</string>
    <string name="type_hotels">Hotel</string>
    <string name="type_foods">Food</string>
    <string name="type_shopping">Shopping</string>
    <string name="type_destinations">Destination</string>
    <string name="type_rental">Rental &amp; Guide</string>
    <string name="type_news">News</string>
    <string name="type_event">Event</string>
    <string name="search_hint">Search...</string>
    <string name="title_fragment_sign_in">Sign In</string>
    <string name="title_fragment_sign_up">Sign Up</string>
    <string name="title_fragment_edit_profile">Edit Profile</string>
    <string name="title_fragment_forgot">Forgot Password</string>
    <string name="title_fragment_reset">Reset Password</string>
    <string name="sign_in_title">Welcome back to\nE-Kelontong.</string>
    <string name="sign_in_subtitle">Sign In and continue exploring</string>
    <string name="sign_up_title">Registrasi</string>
    <string name="update_profile_title">Update your profile\ndata.</string>
    <string name="sign_up_subtitle">Registrasi Untuk Menggunakan Lebih Lanjut</string>
    <string name="forgot_title">Don’t worry !</string>
    <string name="forgot_subtitle">Please enter the email address associated\nwith your account</string>
    <string name="reset_title">Set Your New\nPassword !</string>
    <string name="reset_subtitle">Please enter your email address and reset code</string>
    <string name="title_activity_reviews">Reviews</string>
    <string name="add_review_success">Add review successfully !</string>
    <string name="write_a_review">Write a review</string>
    <string name="review_hint">Describe your experience...</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_term_condition">Term &amp; condition</string>
    <string name="title_activity_images">Images</string>
    <string name="image_of">%1$d / %2$d</string>
    <string name="title_activity_dialog_notification">Notification</string>
    <string name="delete_successfully">Delete successfully</string>
    <string name="type_notif_news">NEWS</string>
    <string name="type_notif_topic">TOPIC</string>
    <string name="type_notif_link">LINK</string>
    <string name="type_notif_image">IMAGE</string>
    <string name="type_notif_normal">NORMAL</string>
    <string name="title_activity_search">Search</string>
    <string name="please_fill">Please Fill Search Input</string>
    <string name="sheet_filter">Filters</string>
    <string name="filter_type">Type</string>
    <string name="filter_all">All</string>
    <string name="filter_category">Category</string>
    <string name="filter_order">Order</string>
    <string name="filter_new_old">New to old</string>
    <string name="filter_old_new">Old to new</string>
    <string name="filter_high_rating">Highest rating</string>
    <string name="filter_low_rating">Lowest rating</string>
    <string name="filter_most_review">Most review</string>
    <string name="filter_less_review">Less review</string>
    <string name="title_activity_notification">Notification</string>
    <string name="notification_channel_server">Default</string>
    <string name="msg_notif_empty">Notification is empty</string>
    <string name="top_button_hour">Hour</string>
    <string name="top_button_phone">Phone</string>
    <string name="top_button_reviews">Reviews</string>
    <string name="top_button_navigate">Navigate</string>
    <string name="top_button_share">Share</string>
    <string name="section_description">Description</string>
    <string name="button_view_more">View more</string>
    <string name="button_view_less">View less</string>
    <string name="section_location">Location</string>
    <string name="section_reviews">Reviews</string>
    <string name="button_view_review">View all reviews</string>
    <string name="section_related">Related</string>
    <string name="more_info">More info</string>
    <string name="more">more</string>
    <string name="reviews">reviews</string>
    <string name="closed">closed</string>
    <string name="open">open</string>
    <string name="today">today</string>
    <string name="always_open">Always open</string>
    <string name="bt_add_cart">TAMBAH KE KERANJANG</string>
    <string name="please_wait_text">Please wait until data loaded</string>
    <string name="remove_cart">Remove from shopping cart</string>
    <string name="msg_out_of_stock">Ops, Product out of stock</string>
    <string name="msg_suspend">Ops, Product is suspend</string>
    <string name="add_cart">Add to shopping cart</string>
    <string name="bt_remove_cart">HAPUS DARI KERANJANG</string>
    <string name="title_activity_cart">Keranjang Belanja</string>
    <string name="title_activity_cart_retur_sales">Keranjang Retur Penjualan</string>
    <string name="no_item">No Item</string>
    <string name="total_sub">Pesanan&#160;</string>
    <string name="before_tax">( Before tax )</string>
    <string name="CONTINUE">SELANJUTNYA</string>
    <string name="msg_cart_empty">Shopping Cart is empty</string>
    <string name="msg_cart_retur_sales_empty">Shopping Cart Retur Sales is empty</string>
    <string name="cart_delete_confirm">Are you sure want to delete</string>
    <string name="stock">Stock : &#160;</string>
    <string name="product_order_list">Pesanan</string>
    <string name="buyer_profile">Shipping</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_address">Address</string>
    <string name="hint_shipping">Shipping location</string>
    <string name="cost_details">Cost</string>
    <string name="sub_total">Subtotal :&#160;</string>
    <string name="tax">Tax&#160;</string>
    <string name="shipping">Shipping&#160;</string>
    <string name="total_fess">Total :&#160;</string>
    <string name="process_checkout">PROCESS CHECKOUT</string>
    <string name="title_please_wait">Please Wait</string>
    <string name="content_submit_checkout">Submit Checkout&#8230;</string>
    <string name="content_submit_payment">Submit Pembayaran&#8230;</string>
    <string name="content_submit_payment_retur_penjualan">Submit retur penjualan&#8230;</string>
    <string name="menu_home">Home</string>
    <string name="menu_category">Categories</string>
    <string name="menu_riwayat_penjualan">Penjualan</string>
    <string name="menu_news_info">News Info</string>
    <string name="menu_untung_rugi">Untung Rugi</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_neraca">Neraca</string>
    <string name="str_nav_shopping_cart">Shopping Cart</string>
    <string name="str_nav_wishlist">Wishlist</string>
    <string name="str_nav_history">Order History</string>
    <string name="str_nav_notifications">Notifications</string>
    <string name="str_nav_instruction">Instruction</string>
    <string name="str_nav_contact_us">Contact us</string>
    <string name="str_nav_rate">Rate this</string>
    <string name="str_nav_about">About</string>
    <string name="confirm_payment">Apakah Anda Yakin Untuk Melakukan Pembayaran?</string>
    <string name="confirm_payment_sales_retur">Apakah Anda Yakin Untuk Melakukan Retur Penjualan?</string>
    <string name="failed_checkout">
        Ups, Gagal saat pembayaran pesanan
        \n\nPastikan Anda memiliki koneksi internet, atau jika Anda memerlukan bantuan silakan Hubungi Kami
    </string>
    <string name="failed_checkout_sales_retur">
        Ups, Gagal saat retur penjualan
        \n\nPastikan Anda memiliki koneksi internet, atau jika Anda memerlukan bantuan silakan Hubungi Kami
    </string>
    <string name="TRY_AGAIN">TRY AGAIN</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="PAY_NOW">PAY NOW</string>
    <string name="CETAK_NOTA_NOW">NOTA</string>
    <string name="KEMBALI">KEMBALI</string>
    <string name="success_checkout">Congratulation</string>
    <string name="msg_success_checkout">
        Successfully checkout order.\nYour order code : %1$s.
    </string>
    <string name="msg_success_checkout_sales_retur">
        Successfully sales retur order.\nYour order code : %1$s.
    </string>
    <string name="open_every_day">Everyday</string>
    <string-array name="days_array">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="days_array_short">
        <item>sun</item>
        <item>mon</item>
        <item>tue</item>
        <item>wed</item>
        <item>thu</item>
        <item>fri</item>
        <item>sat</item>
    </string-array>
    <string name="title_activity_intro">Introduction</string>
    <string-array name="about_title_array">
        <item>Welcome to Traver.</item>
        <item>Discover best places.</item>
        <item>Enjoy your trip !!</item>
    </string-array>
    <string-array name="about_description_array">
        <item>Traver app is multiple city travel app ready\nto companion your trip.</item>
        <item>Explore your favorite destinations, hotels,\nfoods and shopping places</item>
        <item>Get ready for a enjoyable\ntravel experience with traver app</item>
    </string-array>
    <string name="share_text" formatted="false">
        View Location \'%1$s\'%n
        Using app \'%2$s\'%n
        http://play.google.com/store/apps/details?id=com.app.traver
    </string>
    <string name="share_text_news_event" formatted="false">
        Read News Event \'%1$s\'%n
        Using app \'%2$s\'%n
        http://play.google.com/store/apps/details?id=com.app.traver
    </string>
    <string name="title_delete_confirm">Delete Confirmation</string>
    <string name="content_delete_confirm">Are you sure want to delete all&#160;</string>
    <string name="delete_success">Delete successfully</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="open_now">open</string>
    <string name="close_now">closed</string>
    <string name="title_info">Info</string>
    <string name="confirmation">Confirmation</string>
    <string name="error_state_text">Oops !!</string>
    <string name="empty_state_text">No item</string>
    <string name="empty_state_text_search">Search anything</string>
    <string name="empty_state_subtitle_search">Add filters for more accurate\nsearch result</string>
    <string name="empty_state_retry">Tap to retry</string>
    <string name="empty_state_no_data">There are no data\nto show</string>
    <string name="failed_text">Something went wrong\ntap to retry</string>
    <string name="failed_when_load">Failed when load data</string>
    <string name="no_internet_text">No internet connection\ntap to retry</string>
    <string name="no_internet_connection">There is something problem with your network, please check your internet setting.</string>
    <string name="unable_connect_server">Something went wrong, unable connect to server</string>
    <string name="logout_confirmation_text">Are you sure want to logout?</string>
    <string name="msg_app_out_date">Aplikasi sudah kedaluwarsa, harap perbarui untuk mendapatkan versi terbaru</string>
    <string name="msg_app_new_version">Versi baru tersedia, perbarui sekarang untuk mendapatkan fitur terbaru</string>
    <string name="msg_no_internet">Please check your Internet connection and try again</string>
    <string name="failed">Failed</string>
    <string name="hint_password">Password</string>
    <string name="already_have_account">Sudah memiliki akun?</string>
</resources>