<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_register"
    android:orientation="vertical">

    <include layout="@layout/include_banner_info" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_18">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_2"
                            android:layout_marginBottom="@dimen/spacing_6"
                            android:fontFamily="sans-serif-medium"
                            android:text="@string/sign_up_title"
                            android:textColor="@color/tx_dark"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/spacing_2"
                            android:layout_marginBottom="@dimen/spacing_28"
                            android:text="@string/sign_up_subtitle"
                            android:fontFamily="sans-serif-light"
                            android:textColor="@color/ic_dark"
                            android:textSize="@dimen/txt_small" />
                    </LinearLayout>


                </LinearLayout>

                <EditText
                    android:id="@+id/et_nomor_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_44"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:background="@drawable/edit_text_round_bg_outline_black"
                    android:drawableStart="@drawable/baseline_whatsapp_24"
                    android:drawablePadding="@dimen/spacing_12"
                    android:hint="Nomor Whatsapp"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/tx_dark"
                    android:textSize="@dimen/spacing_14"
                    android:textColorHint="@color/tx_soft" />

                <EditText
                    android:id="@+id/et_nama_pemilik_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_44"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:background="@drawable/edit_text_round_bg_outline_black"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/spacing_12"
                    android:hint="Nama Pemilik Usaha"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/tx_dark"
                    android:textSize="@dimen/spacing_14"
                    android:textColorHint="@color/tx_soft" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_44"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:background="@drawable/edit_text_round_bg_outline_black"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/spacing_12"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/tx_dark"
                    android:textSize="@dimen/spacing_14"
                    android:textColorHint="@color/tx_soft" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_16">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_44"
                        android:background="@drawable/edit_text_round_bg_outline_black"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="@dimen/spacing_12"
                        android:fontFamily="monospace"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLength="50"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/tx_dark"
                        android:textSize="@dimen/spacing_14"
                        android:textColorHint="@color/tx_soft" />

                    <ImageButton
                        android:id="@+id/show_pass"
                        android:layout_width="@dimen/spacing_40"
                        android:layout_height="@dimen/spacing_40"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/spacing_8"
                        android:background="?attr/selectableItemBackground"
                        android:src="@drawable/toggle_password_view" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/grey_60"
                    android:layout_marginBottom="@dimen/spacing_20"/>

                <EditText
                    android:id="@+id/et_nama_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_44"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:background="@drawable/edit_text_round_bg_outline_black"
                    android:drawableStart="@drawable/baseline_account_balance_24"
                    android:drawablePadding="@dimen/spacing_12"
                    android:hint="Nama Usaha"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/tx_dark"
                    android:textSize="@dimen/spacing_14"
                    android:textColorHint="@color/tx_soft" />
                <EditText
                    android:id="@+id/et_alamat_usaha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_44"
                    android:layout_marginBottom="@dimen/spacing_20"
                    android:background="@drawable/edit_text_round_bg_outline_black"
                    android:drawableStart="@drawable/baseline_location_pin_24"
                    android:drawablePadding="@dimen/spacing_12"
                    android:hint="Alamat Usaha"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/tx_dark"
                    android:textSize="@dimen/spacing_14"
                    android:textColorHint="@color/tx_soft" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginBottom="@dimen/spacing_6"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/loading_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <include layout="@layout/include_loading" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_submit"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/btn_rounded_green_300"
                        android:text="Daftar"
                        android:textAllCaps="false"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/spacing_14"
                        android:textColor="@color/white" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/button_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/button_overlay"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/already_have_account"
                        android:textSize="@dimen/spacing_14"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spacing_6"
                        android:text="@string/title_fragment_sign_in"
                        android:textColor="@color/black"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="@dimen/spacing_14"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</LinearLayout>