<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBg"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbar"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="@dimen/spacing_8"
                    android:layout_height="0dp" />

                <ImageView
                    android:id="@+id/toolbar_menu_back"
                    android:layout_width="@dimen/spacing_40"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/button_overlay"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/spacing_8"
                    app:srcCompat="@drawable/ic_arrow_back"
                    app:tint="@color/toolbarIconText" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_10"
                    android:paddingTop="@dimen/spacing_2"
                    android:text="@string/title_activity_cart"
                    android:textColor="@color/toolbarIconText"
                    android:textSize="@dimen/txt_mlarge"
                    app:fontFamily="@font/custom_font_medium" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageView
                    android:id="@+id/toolbar_menu_delete"
                    android:layout_width="@dimen/spacing_40"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@drawable/button_overlay"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="@dimen/spacing_8"
                    app:srcCompat="@drawable/ic_delete"
                    app:tint="@color/toolbarIconText" />

                <View
                    android:layout_width="@dimen/spacing_8"
                    android:layout_height="0dp" />

            </LinearLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:paddingHorizontal="@dimen/spacing_6"
            android:paddingTop="@dimen/spacing_10"
            android:scrollbars="vertical"
            android:scrollingCache="true" />

        <include
            android:id="@+id/lyt_no_item"
            layout="@layout/include_no_item"
            android:visibility="gone" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainBg"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/softBg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_12"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/spacing_20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_sub"
                android:textColor="@color/textIconPrimary"
                android:textSize="@dimen/txt_medium"
                app:fontFamily="@font/custom_font_medium" />


            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/price_total"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/custom_font_semi_bold"
                android:text="0 IDR"
                android:textColor="@color/primary_register_dark"
                android:textSize="@dimen/txt_medium" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing_18"
            android:layout_marginTop="@dimen/spacing_12"
            android:layout_marginBottom="@dimen/spacing_15"
            app:cardCornerRadius="@dimen/spacing_8"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="false">

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/lyt_continue"
                style="@style/RippleStyleBlack"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_36"
                android:background="@color/primary_register_dark"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:id="@+id/tv_add_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/CONTINUE"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_small"
                    app:fontFamily="@font/custom_font_medium" />

            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>